@@ -1,5 +1,5 @@
 package alexsocol.asjlib.render
 
 interface ICustomArmSwingEndEntity {
-	fun getArmSwingAnimationEnd(): Int
+	fun getCustomArmSwingAnimationEnd(): Int
 }
