@@ -1,10 +1,13 @@
 package alexsocol.patcher.handler
 
-import alexsocol.asjlib.ASJUtilities
+import alexsocol.asjlib.*
 import alexsocol.patcher.PatcherConfigHandler
 import cpw.mods.fml.common.eventhandler.*
+import cpw.mods.fml.common.gameevent.TickEvent
+import cpw.mods.fml.common.gameevent.TickEvent.PlayerTickEvent
 import cpw.mods.fml.relauncher.*
 import net.minecraft.client.gui.GuiScreen
+import net.minecraft.entity.SharedMonsterAttributes
 import net.minecraft.entity.player.EntityPlayer
 import net.minecraftforge.event.entity.living.*
 import net.minecraftforge.event.entity.player.*
@@ -27,12 +30,17 @@ object PatcherEventHandler {
 	fun fixNaNHealthBug(e: LivingEvent.LivingUpdateEvent) {
 		val target = e.entityLiving
 		
-		if (target.health.isNaN()) target.health = target.maxHealth
+		var max = target.maxHealth
+		if (max.isNaN()) max = target.getEntityAttribute(SharedMonsterAttributes.maxHealth).attributeValue.F
+		if (max.isNaN()) max = target.getEntityAttribute(SharedMonsterAttributes.maxHealth).baseValue.F
+		if (max.isNaN()) max = 20f
+		
+		if (target.health.isNaN()) target.health = max
 		if (target.prevHealth.isNaN()) target.prevHealth = target.health
 		if (target.lastDamage.isNaN()) target.lastDamage = 0f
 		if (target.absorptionAmount.isNaN()) target.absorptionAmount = 0f
 		
-		if (target.health > target.maxHealth) target.health = target.maxHealth
+		if (target.health > max) target.health = max
 		if (target.health < 0f) target.health = 0f
 	}
 	
@@ -40,6 +48,13 @@ object PatcherEventHandler {
 	fun onBreakingInAir(e: PlayerEvent.BreakSpeed) {
 		if (!PatcherConfigHandler.flyFastDig || e.entityPlayer.onGround || !e.entityPlayer.capabilities.isFlying) return
 		e.newSpeed *= 5f
+	}
+	
+	@SubscribeEvent
+	fun onPlayerPreTick(e: PlayerTickEvent) {
+		if (e.phase != TickEvent.Phase.START) return
+		
+		e.player.foodStats.host = e.player
 	}
 }
 
