@@ -94,7 +94,7 @@ public @interface Hook {
 	 * Позволяет объявить хук "обязательным" для запуска игры. В случае неудачи во время вставки такого хука
 	 * будет не просто выведено сообщение в лог, а крашнется игра.
 	 */
-	boolean isMandatory() default false;
+	boolean isMandatory() default true;
 	
 	/**
 	 * По умолчанию хук вставляется в начало целевого метода.
