@@ -7,6 +7,8 @@ public net.minecraft.entity.EntityList field_75624_e # classToIDMapping
 public net.minecraft.entity.EntityLivingBase *
 public net.minecraft.entity.effect.EntityLightningBolt *
 public net.minecraft.item.ItemStack *
+public net.minecraft.nbt.JsonToNBT.Primitive
+public net.minecraft.nbt.JsonToNBT.Primitive field_150493_b
 public net.minecraft.nbt.NBTTagCompound field_74784_a # tagMap
 public net.minecraft.nbt.NBTTagList field_74747_a # tagList
 public net.minecraft.potion.PotionEffect *
